package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@external_binaries//:def.bzl", "binary_location")
load("//rules/workspace_status:def.bzl", "workspace_status")
load(":def.bzl", "project")

gazelle(
    name = "gazelle",
    prefix = "github.com/SUSE/kubecf",
)

workspace_status(
    name = "workspace_status",
)

[binary_location(
    name = "{name}_binary_location".format(name = name),
    binary = "@{}//:binary".format(name),
) for name, _ in project.external_binaries.items()]
